cif/org.eclipse.escet.cif.tests/tests/checks/AutOnlySpecificSupKindsCheckPlantsReqs.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:
 - Automaton is a kindless automaton rather than a plant or requirement automaton:
   - In the top-level scope of the specification:
     - automaton def A1():
                     ^
     - automaton a1:
                 ^
   - In group "g":
     - automaton def A1():
                     ^
     - automaton a1:
                 ^
 - Automaton is a supervisor automaton rather than a plant or requirement automaton:
   - In the top-level scope of the specification:
     - supervisor automaton def S1():
                                ^
     - supervisor automaton s1:
                            ^
   - In group "g":
     - supervisor automaton def S1():
                                ^
     - supervisor automaton s1:
                            ^
